--- a/assik7.html
+++ b/assik7.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <h1>Assignment #7 — jQuery (Selectors, Effects, Animations)</h1>
+  <h1>Assignment 7 - jQuery</h1>
 
   <!-- Part 1 -->
   <section>
